--- a/03-lection1/01-button/button.css
+++ b/03-lection1/01-button/button.css
@@ -11,53 +11,53 @@
 	transition: opacity 200ms ease-in-out, background 200ms ease-in-out;
 }
 
-.btn--primary {
+.btn_primary {
 	background: var(--primary);
 }
 
-.btn--primary:hover {
+.btn_primary:hover {
 	background: #2342C0;
 	cursor:pointer;
 }
 
-.btn--primary:focus {
+.btn_primary:focus {
 	background: #2342C0;
 	cursor:pointer;
 	border:0;
 }
-.btn--primary:disabled {
+.btn_primary:disabled {
 	background: #4263EB;
 	opacity: 0.5;
 	cursor:not-allowed;
 }
 
-.btn--secondary {
+.btn_secondary {
 	background: var(--secondary);
 }
 
-.btn--secondary:hover {
+.btn_secondary:hover {
 	background: #5028C6;
 	cursor:pointer;
 }
 
-.btn--secondary:disabled {
+.btn_secondary:disabled {
 	background: #7048E8;
 	opacity: 0.5;
 	cursor:not-allowed;
 }
 
-.btn--alternate {
+.btn_alternate {
 	background-color: #fff;
 	border: 1px solid #ACB5BD;
 	color: #495057;
 }
 
-.btn--alternate:hover {
+.btn_alternate:hover {
 	border: 1px solid #212429;
 	cursor:pointer;
 }
 
-.btn--alternate:disabled {
+.btn_alternate:disabled {
 	opacity: 0.3;
 	cursor:not-allowed;
 }
