--- a/03-lection1/02-accordion/accordion.css
+++ b/03-lection1/02-accordion/accordion.css
@@ -1,11 +1,18 @@
 /* Стилизация аккордеона */
+
+@import '../assets/css/main.css';
+
 .accordeon {
-	margin:20px;
+	font-family: 'Inter', sans-serif;
+	line-height: 150%;
+	margin: 20px;
+	width: 730px;
+	height: 144px;
 }
 
 .accordeon__item {
-	border:1px solid gray;
-	border-radius:10px;
+	border: 1px solid gray;
+	border-radius: 10px;
 	padding: 30px;
 	margin-bottom: 8px;
 }
@@ -16,19 +23,21 @@
 
 .accordeon__title {
 	display: block;
-	font-size: 20px;
-	font-weight: 700;
+	color: #212429;
+}
+
+.accordeon__text {
+	color: #495057;
 }
 
 summary::-webkit-details-marker {
 	display: none;
- }
+}
 
- details summary:before {
+details summary:before {
 	content: 'V';
 	font-size: 20px;
 	font-weight: 300;
-	color:gray;
+	color: gray;
 	margin-right: 7px;
- }
-  
+}
