--- a/03-lection1/02-accordion/accordion.css
+++ b/03-lection1/02-accordion/accordion.css
@@ -13,7 +13,7 @@
 .accordeon__item {
 	border: 1px solid gray;
 	border-radius: 10px;
-	padding: 30px;
+	padding: 24px 32px;
 	margin-bottom: 8px;
 }
 
@@ -42,4 +42,3 @@ summary .marker {
 details[open] .marker {
 	transform: rotate(90deg);
 }
-
