--- a/03-lection1/02-accordion/accordion.css
+++ b/03-lection1/02-accordion/accordion.css
@@ -42,3 +42,9 @@ summary .marker {
 details[open] .marker {
 	transform: rotate(90deg);
 }
+
+details[open] .accordeon__text {
+margin:0;
+margin-top: 16px;
+margin-bottom: 8px;
+}
