--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,9 @@
-@import 'normalize.css';
+@import './normalize.css';
 @import '../fonts/fonts.css';
+
+@import '../../components/page/page.css';
+@import '../../components/header/header.css';
+@import '../../components/footer/footer.css';
 
 :root {
     --white: #ffffff;
@@ -18,6 +22,9 @@
 
     --primary: var(--blue);
     --secondary: var(--purple);
+
+    --font-primary: var(--black);
+    --background-main: var(--white);
 }
 
 * {
