--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,14 @@
 @import 'normalize.css';
 @import '../fonts/fonts.css';
 
+
+@import '../../components/page/page.css';
+@import '../../components/header/header.css';
+@import '../../components/preview/preview.css';
+@import '../../components/container/container.css';
+@import '../../components/card/card.css';
+@import '../../components/footer/footer.css';
+
 :root {
     --white: #ffffff;
     --black: #212429;
@@ -15,6 +23,7 @@
     --grey-2: #DDE2E5;
     --grey-3: #ACB5BD;
     --grey-4: #495057;
+    --grey-5:#F9FAFC;
 
     --error: var(--red);
     --success: var(--blue);
@@ -24,6 +33,7 @@
 
     --font-primary: var(--black);
     --background-main: var(--white);
+    --background-secondary:var(--grey-5);
 
     --primary-hover:var(--blue-2);
     --secondary-hover:var(--purple-2);
