--- a/03-lection1/02-accordion/accordion.css
+++ b/03-lection1/02-accordion/accordion.css
@@ -3,11 +3,6 @@
 .accordeon {
 	font-family: 'Inter', sans-serif;
 	line-height: 1.5;
-	max-width:730px;
-	}
-
-.accordeon__margin {
-	margin: 20px; 
 }
 
 .accordeon__item {
@@ -15,6 +10,7 @@
 	border-radius: 10px;
 	padding: 24px 32px;
 	margin-bottom: 8px;
+	position: relative;
 }
 
 .accordeon__item:last-child {
@@ -39,12 +35,24 @@
 	padding-right: 0.5em;
 }
 
-.accordeon__block[open] .marker {
-	transform: rotate(90deg);
+.accordeon__marker {
+width: 10px;
+height: 10px;
+border-top:1px solid var(--arrow);
+border-right: 1px solid var(--arrow);
+transform: rotate(-45deg);
+position: absolute;
+top: 32px;
+right:32px;
+cursor:pointer;
 }
 
-.accordeon__block[open] .accordeon__text {
-margin:0;
-margin-top: 16px;
-margin-bottom: 8px;
+.accordeon__item[open] .accordeon__marker {
+	transform: rotate(-225deg);
+}
+
+.accordeon__item[open] .accordeon__text {
+	margin: 0;
+	margin-top: 16px;
+	margin-bottom: 8px;
 }
