--- a/04-lection2/01-histogram/histogram.css
+++ b/04-lection2/01-histogram/histogram.css
@@ -8,7 +8,7 @@
 	display: flex;
 	flex-direction: column;
 	width: 354px;
-	border: 1px solid #ACB5BD;
+	border: 1px solid var(--alternate-border);
 	border-radius: 8px;
 }
 
@@ -21,7 +21,6 @@
 .histogram__title {
 	line-height: 1.5;
 	color: var(--black);
-	/* поменять*/
 	opacity: 0.8;
 	padding-bottom: 6px;
 }
@@ -30,14 +29,12 @@
 	font-size: 20px;
 	line-height: 1.3;
 	color: var(--black);
-	/* поменять*/
 }
 
 .histogram__right-part {
 	line-height: 1.5;
 	text-align: right;
-	color: #4263EB;
-	/* поменять*/
+	color: var(--background-histogram);
 	padding-top: 3px;
 }
 
@@ -49,7 +46,7 @@
 }
 
 .histogram__column {
-	background: #4263EB;
+	background: var(--background-histogram);
 	margin-right: 1px;
 	flex: 0 1 9px;
 }
