--- a/05-lection3/01-tooltip/tooltip.css
+++ b/05-lection3/01-tooltip/tooltip.css
@@ -8,10 +8,10 @@
 }
 
 .tooltip__trigger {
-	position: absolute;
+	/* position: absolute;
 	top:60px;
 	left:50%;
-	transform: translateX(-50%);
+	transform: translateX(-50%); */
 }
 
 .tooltip__bubble {
@@ -28,7 +28,7 @@
 	position: absolute;
 	top:0;
 	left:50%;
-	transform: translateX(-50%);
+	transform: translateX(-50%); 
 
 }
 .tooltip__bubble:after {
