--- a/components/footer/footer.css
+++ b/components/footer/footer.css
@@ -5,6 +5,11 @@
 	text-align: center;
 }
 
+.footer_layout {
+	height: 130px;
+	background: transparent;
+}
+
 .footer__inner {
 	padding: 72px 0 136px;
 	margin: 0 auto;
