--- a/components/header/header.css
+++ b/components/header/header.css
@@ -1,11 +1,11 @@
 
 .header {
-	padding: 96px 0 77px;
-	/* background: var(--background-main); */
+	height: 237px;
+	background: var(--background-main);
 }
 
 .header_layout {
-height: 82px;
+height: 88px;
 background:transparent;
 }
 
@@ -17,4 +17,5 @@ font-size: 50px;
 line-height: 1.28;
 color: var(--font-primary);
 margin: 0;
+padding: 96px 0 77px;
 }
