--- a/components/layout/layout.css
+++ b/components/layout/layout.css
@@ -2,6 +2,6 @@
 	height: 100%;
 	display: grid;
 	grid-template-rows: auto 1fr auto;
-	/* grid-row-gap: 30px; */
+	grid-row-gap: 30px;
 	background: var( --background-secondary);
 }
