--- a/components/content/content.css
+++ b/components/content/content.css
@@ -10,3 +10,14 @@
 }
 
 .content__inner {}
+
+.content__title {
+	font-family: 'Inter';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 28px;
+	line-height: 1.36;
+	color: var(--alternate-text);
+	margin: 0;
+	padding: 32px 0 0 48px;
+}
