--- a/components/footer/footer.css
+++ b/components/footer/footer.css
@@ -6,9 +6,9 @@
 }
 
 .footer_layout {
-	height: 130px;
 	background: transparent;
-}
+	padding: 56px 0;
+	}
 
 .footer__inner {
 	padding: 72px 0 136px;
