--- a/components/sidebar/sidebar.css
+++ b/components/sidebar/sidebar.css
@@ -1,3 +1,35 @@
-.sidebar{
+.sidebar {
 	width: 394px;
+}
+
+.sidebar__menu {
+
+	padding: 0 56px 0 165px;
+}
+
+.sidebar__list {
+	padding-bottom: 32px;
+}
+
+.sidebar__title {
+	font-family: 'Inter';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 20px;
+	line-height: 1.3;
+	color: var(--menu-title);
+	padding-bottom: 16px;
+}
+
+.sidebar__item-menu {
+	display: block;
+
+	font-family: 'Inter';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 1.57;
+	color: var(--font-primary);
+	text-decoration: none;
+
 }
