--- a/05-lection3/01-tooltip/tooltip.css
+++ b/05-lection3/01-tooltip/tooltip.css
@@ -1,11 +1,3 @@
-body {
-	padding-top: 100px;
-	padding-left: 100px;
-}
-.tooltip-wrapper {
-	text-align: center;
-}
-
 .tooltip {
 	position: relative;
 	display: inline-block;
@@ -18,7 +10,7 @@ body {
 .tooltip__bubble {
 	display: none;
 	padding: 13px 21px;
-	background: var(--main-element);
+	background: var(--active-background);
 	box-shadow: 0px 2px 4px rgba(33, 36, 41, 0.05);
 	border-radius: 10px;
 	color: var(--background-main);
@@ -26,11 +18,11 @@ body {
 	font-family: 'Inter';
 	line-height: 1.5;
 	text-align: center;
-	
+/* 	
 	position: absolute;
 	left:50%;
 	bottom:calc(100% + 8px);
-	transform: translateX(-50%); 
+	transform: translateX(-50%);  */
 
 }
 .tooltip__bubble:after {
@@ -38,7 +30,7 @@ body {
 	width: 0;
 	height: 0;
 	border:10px solid transparent;
-	border-top: 5px solid var(--main-element);
+	border-top: 5px solid var(--active-background);
 	position: absolute;
 	top:100%;
 	left:50%;
