--- a/07-lection5/04-input/input.css
+++ b/07-lection5/04-input/input.css
@@ -1,8 +1,16 @@
+.form-group {
+	padding: 50px;
+	display: inline-flex;
+	flex-wrap: wrap;
+	gap: 30px;
+}
+
 .input {
 	display: inline-flex;
+	flex-basis: 40%;
 	flex-direction: column;
 	padding-bottom: 16px;
-}
+	}
 
 .input__field {
 	background: #FFFFFF;
