--- a/07-lection5/04-input/input.css
+++ b/07-lection5/04-input/input.css
@@ -1,15 +1,7 @@
-.form-group {
-	padding: 50px;
-	display: inline-flex;
-	flex-wrap: wrap;
-	gap: 30px;
-}
-
 .input {
 	display: inline-flex;
-	/* flex-basis: 40%; */
 	flex-direction: column;
-	padding-bottom: 16px;
+	
 }
 
 .input__block {
@@ -17,8 +9,8 @@
 }
 
 .input__field {
-	background: #FFFFFF;
-	border: 1px solid #DDE2E5;
+	background: var(--background-main);
+	border: 1px solid var(--alternate-control);
 	border-radius: 8px;
 	padding: 17px 24px 13px;
 	min-width: 350px;
@@ -30,7 +22,7 @@
 	font-weight: 400;
 	font-size: 20px;
 	line-height: 1.3;
-	color: #DDE2E5;
+	color: var(--alternate-control);
 }
 
 .input__title {
@@ -41,7 +33,7 @@
 	line-height: 1.5;
 	letter-spacing: 0.04em;
 	text-transform: uppercase;
-	color: #ACB5BD;
+	color: var(--title-control);
 	padding-bottom: 5px;
 }
 
@@ -55,31 +47,31 @@
 }
 
 .input__icon_success {
-	color: #374FC7;
+	color: var(--success-control);
 }
 
 .input__icon_error {
-	color: #F03D3E;
+	color: var(--error-control);
 }
 
 .input_success .input__field::placeholder {
-	color: #495057;
+	color: var(--placeholder-control);
 }
 
 .input_focus .input__field::placeholder {
-	color: #495057;
+	color: var(--placeholder-control);
 }
 
 .input_focus .input__field {
-	border: 1px solid #4263EB;
+	border: 1px solid var(--focus-control);
 	box-shadow: 0px 1px 1px rgba(51, 154, 240, 0.1);
 }
 
 .input_invalid .input__field::placeholder {
-	color: #495057;
+	color: var(--placeholder-control);
 }
 
 .input_invalid .input__field {
-	border: 1px solid #F03D3E;
+	border: 1px solid var(--error-control);
 	box-shadow: 0px 1px 1px rgba(240, 61, 62, 0.1);
 }
