--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,6 +8,7 @@
     --pink: #F784AD;
     --purple: #7048E8;
     --blue: #374FC7;
+    --blue-2:#4263EB;
 
     --red: #F03D3E;
     --grey-1: #F8F9FA;
@@ -44,6 +45,14 @@
     --gradient-skeleton-1:var(--lite-1);
     --gradient-skeleton-2:var(--lite-2);
     --gradient-skeleton-3:var(--lite-3);
+
+    --alternate-control:var(--grey-2);
+    --title-control:var(--grey-3);
+    --success-control:var(--blue);
+    --error-control:var(--red);
+    --placeholder-control:var(--grey-4);
+    --focus-control:var(--blue-2);
+
 }
 
 
