add toggler change main.css

--- a/07-lection5/03-toggler/toggler.css
+++ b/07-lection5/03-toggler/toggler.css
@@ -65,8 +65,8 @@
 }
 
 .toggler__input:checked~.toggler__state .toggler__control {
-	background: var(--focus-control);
-	border: 1px solid var(--focus-control);
+	background: var(--checked-control);
+	border: 1px solid var(--checked-control);
 }
 
 .toggler__input:checked~.toggler__state .toggler__switcher {
