--- a/05-lection3/01-tooltip/tooltip.css
+++ b/05-lection3/01-tooltip/tooltip.css
@@ -4,9 +4,7 @@
 }
 
 .tooltip__trigger {
-	top: 60px;
-	left: 60px;
-	position: absolute;
+
 }
 
 .tooltip__bubble {
@@ -22,10 +20,9 @@
 	text-align: center;
 
 	position: absolute;
-	left: 35px;
-	/* bottom: calc(100% + 8px);
+	bottom: calc(100% + 8px);
 	left: 50%;
-	transform: translateX(-50%); */
+	transform: translateX(-50%);
 
 }
 
