add checkbox delete title

--- a/07-lection5/01-checkbox/checkbox.css
+++ b/07-lection5/01-checkbox/checkbox.css
@@ -1,4 +1,4 @@
-.title {
+/* .title {
 	font-family: 'Inter';
 	font-style: normal;
 	font-weight: 500;
@@ -7,7 +7,7 @@
 	letter-spacing: 0.04em;
 	text-transform: uppercase;
 	color: var(--subtitle);
-}
+} */
 
 .checkbox {
 	display: flex;
