--- a/07-lection5/03-toggler/toggler.css
+++ b/07-lection5/03-toggler/toggler.css
@@ -1,4 +1,4 @@
-.title {
+/* .title {
 	font-family: 'Inter';
 	font-style: normal;
 	font-weight: 500;
@@ -8,7 +8,7 @@
 	text-transform: uppercase;
 	color: var(--alternate-control);
 	padding-bottom: 13px;
-}
+} */
 
 .toggler {
 	display: flex;
