--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,6 @@
 @import './normalize.css';
 @import '../fonts/fonts.css';
+@import '../../components/container/container.css';
 
 :root {
     --white: #ffffff;
