--- a/09-lection7/01-burger-menu/burger-menu.css
+++ b/09-lection7/01-burger-menu/burger-menu.css
@@ -1,37 +1,39 @@
 .burger {
 	position: fixed;
-	/* top:0; */
+	top:0;
 	left: -100vw;
 	height: 100vh;
+	padding: 0 16px;
+	max-width: 375px;
 	transition: all .5s ease;
 }
 
 .burger[data-open="open"] {
-	/* position: relative; */
+	position: relative;
 	left: 0;
 }
 
 .burger__nav {
-	position: relative;
-	margin: 0 16px;
+	/* position: relative; */
+	/* margin: 0 16px; */
 
 }
 
 .burger__mode {
 	padding: 24px 0;
+	/* position: relative; */
 }
 
-
-.burger__mode:before {
-	content: '';
+.burger__divider {
 	display: block;
 	width: 100%;
 	height: 1px;
-	background: var(--main-control);
+	background: var(--alternate-control);
 	position: absolute;
 	top: 0;
 	left: 0;
-	}
+}
+
 
 
 
