--- a/09-lection7/01-burger-menu/burger-menu.css
+++ b/09-lection7/01-burger-menu/burger-menu.css
@@ -1,10 +1,11 @@
 .burger {
 	position: fixed;
-	top:0;
+	top: 0;
 	left: -100vw;
 	height: 100vh;
 	padding: 0 16px;
 	max-width: 375px;
+	width: 100%;
 	transition: all .5s ease;
 }
 
@@ -13,28 +14,15 @@
 	left: 0;
 }
 
-.burger__nav {
-	/* position: relative; */
-	/* margin: 0 16px; */
+.burger__nav {}
 
+.burger__divider {
+	width: 100%;
+	height: 1px;
+	background: var(--main-control);
 }
 
 .burger__mode {
 	padding: 24px 0;
-	/* position: relative; */
+	pointer-events: auto;
 }
-
-.burger__divider {
-	display: block;
-	width: 100%;
-	height: 1px;
-	background: var(--alternate-control);
-	position: absolute;
-	top: 0;
-	left: 0;
-}
-
-
-
-
-
