--- a/components/menu/menu.css
+++ b/components/menu/menu.css
@@ -40,7 +40,7 @@
 		display: block;
 		width: 100%;
 		height: 1px;
-		background: #DDE2E5;
+		background: var(--main-control);
 		position: absolute;
 		top: 0;
 		left: 0;
