--- a/components/card/card.css
+++ b/components/card/card.css
@@ -9,28 +9,22 @@
 }
 
 .preview__card {
-	display: flex;
+		display: flex;
 	flex-direction: column;
-	/* justify-content: center; */
 	align-items: center;
+	position: relative;
 }
 
 .card__item {
-	border: 1px solid red;
 	flex: 1 0 auto;
-		display: flex;
-	flex-direction: row;
-	/* justify-content: center; */
-	align-items: center;
-}
+	}
 
 .card__name {
 	font-family: 'Roboto';
 	font-style: normal;
 	color: var(--font-primary);
 	padding: 25px 0 38px;
-	/* flex: 0 0 auto; */
-
+	
 }
 
 .card__title {
@@ -39,6 +33,9 @@
 	line-height: 1.2;
 
 	padding-bottom: 6px;
+	text-decoration: none;
+	color:inherit;
+
 }
 
 .card__subtitle {
