--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,6 +16,9 @@
 
 @import '../../07-lection5/03-toggler/toggler.css';
 @import '../../05-lection3/01-tooltip/tooltip.css';
+@import '../../07-lection5/01-checkbox/checkbox.css';
+@import '../../07-lection5/02-radio/radio.css';
+@import '../../05-lection3/03-calendar/calendar.css';
 
 :root {
     --white: #ffffff;
