--- a/components/card/card.css
+++ b/components/card/card.css
@@ -6,25 +6,46 @@
 	border-radius: 12px;
 	background-color: var(--background-main);
 	font-size: 16px;
-}
-
-.preview__card {
-		display: flex;
+	display: flex; 
 	flex-direction: column;
 	align-items: center;
 	position: relative;
 }
 
+
 .card__item {
 	flex: 1 0 auto;
-	}
+}
+
+.card__item_form {
+	position: relative;
+}
+
+.card__align {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	display: flex;
+	gap: 52px;
+}
+
+.card__wrapper {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	gap: 16px;
+
+}
+
 
 .card__name {
 	font-family: 'Roboto';
 	font-style: normal;
 	color: var(--font-primary);
-	padding: 25px 0 38px;
-	
+	padding-bottom: 38px;
+	text-align: center;
+
 }
 
 .card__title {
@@ -34,7 +55,7 @@
 
 	padding-bottom: 6px;
 	text-decoration: none;
-	color:inherit;
+	color: inherit;
 
 }
 
