add main calendar

--- a/05-lection3/03-calendar/calendar.css
+++ b/05-lection3/03-calendar/calendar.css
@@ -1,10 +1,15 @@
 .calendar {
 	background: var(--background-main);
 	max-width: 350px;
-	width: 100%;
+		width: 100%;
 	/* padding: 28px 26px 40px; */
 	border: 1px solid #ACB5BD;
 	border-radius: 8px;
+}
+
+.calendar_preview {
+	width: 190px;
+	
 }
 
 .calendar__title {
