--- a/components/card/card.css
+++ b/components/card/card.css
@@ -6,15 +6,19 @@
 	border-radius: 12px;
 	background-color: var(--background-main);
 	font-size: 16px;
-	display: flex; 
+	display: flex;
 	flex-direction: column;
 	align-items: center;
 	position: relative;
+	padding: 40px;
 }
 
 
 .card__item {
 	flex: 1 0 auto;
+	/* width: 100%; */
+	/* height: 100%; */
+	/* border: 1px solid red; */
 }
 
 .card__item_form {
@@ -43,9 +47,8 @@
 	font-family: 'Roboto';
 	font-style: normal;
 	color: var(--font-primary);
-	padding-bottom: 38px;
 	text-align: center;
-
+/* padding-top: 25px; */
 }
 
 .card__title {
