--- a/09-lection7/01-burger-menu/burger-menu.css
+++ b/09-lection7/01-burger-menu/burger-menu.css
@@ -1,14 +1,25 @@
 .burger {
-	
-}
+	position: fixed;
+	top: 0;
+	left: -100vw;
+	height: 100vh;
+	padding: 0 16px;
 
-
+	width: 100%;
+	transition: all .5s ease;
+	}
 
 .burger__icons {
 	position: absolute;
 	top: 20px;
-	left: 16px;
+	left:16px;
 	z-index: 5;
+}
+
+#burger-menu-open {
+	position: absolute;
+	top: 0;
+	left: 100vw;
 }
 
 .burger__icon {
@@ -19,17 +30,10 @@
 }
 
 .burger__nav {
-	position: fixed;
-	top: 0;
-	left: -100vw;
-	height: 100vh;
-	padding: 0 16px;
 	max-width: 375px;
-	width: 100%;
-	transition: all .5s ease;
 }
 
-.burger[data-open="open"] .burger__nav {
+.burger[data-open="open"] {
 	left: 0;
 }
 
@@ -56,7 +60,7 @@
 
 	}
 
-	#burger-menu-close[data-open="open"]~.burger__circle {
+	.burger__icon[data-open="open"]~.burger__circle {
 		background: var(--main-control);
 		border-radius: 50%;
 		width: 32px;
