--- a/06-lection4/01-avatar/avatar.css
+++ b/06-lection4/01-avatar/avatar.css
@@ -1,11 +1,10 @@
-
 .avatar {}
 
 .avatar__background {
-	width: 102px;
-	height: 102px;
+	/* width: 102px;
+	height: 102px; */
 	border-radius: 50%;
-		overflow: hidden;
+	overflow: hidden;
 }
 
 .avatar__image {
@@ -13,4 +12,3 @@
 	height: 100%;
 	object-fit: cover;
 }
-
