--- a/03-lection1/01-button/button.css
+++ b/03-lection1/01-button/button.css
@@ -12,6 +12,11 @@
 	cursor: pointer;
 	transition: opacity 200ms ease-in-out, background 200ms ease-in-out;
 }
+.btn_preview {
+	padding: 10px 20px;
+	max-width:100px;
+	font-size: 12px;
+}
 
 .btn_primary {
 	background: var(--primary);
