--- a/05-lection3/02-modal/modal.css
+++ b/05-lection3/02-modal/modal.css
@@ -10,10 +10,11 @@
 	left: 0;
 	right: 0;
 }
-.modal_preview {
-position: relative;
-}
 
+.modal_preview {
+	position: relative;
+	padding: 22px 22px;
+}
 
 .modal__window {
 	background-color: var(--background-main);
@@ -27,11 +28,15 @@ position: relative;
 	padding: 30px 40px;
 }
 
+.modal__window_preview {
+	max-width: 240px;
+	padding:20px 20px;
+}
+
 .modal__cross {
 	position: absolute;
 	top: 15px;
 	right: 23px;
-	width: ;
 }
 
 .modal__cross:before,
