--- a/07-lection5/04-input/input.css
+++ b/07-lection5/04-input/input.css
@@ -3,6 +3,9 @@
 	flex-direction: column;
 	
 }
+.input_preview {
+margin-bottom: 12px;
+}
 
 .input__block {
 	position: relative;
@@ -16,6 +19,11 @@
 	min-width: 350px;
 }
 
+.input__field_preview {
+	min-width: 150px;
+	padding: 8px 15px 8px;
+}
+
 .input__field::placeholder {
 	font-family: 'Inter';
 	font-style: normal;
@@ -24,7 +32,9 @@
 	line-height: 1.3;
 	color: var(--alternate-control);
 }
-
+.input__field_preview::placeholder {
+	font-size:14px;
+}
 .input__title {
 	font-family: 'Inter';
 	font-style: normal;
@@ -33,8 +43,11 @@
 	line-height: 1.5;
 	letter-spacing: 0.04em;
 	text-transform: uppercase;
-	color: var(--title-control);
+	color: var(--subtitle);
 	padding-bottom: 5px;
+}
+.input__title_preview {
+	color:var(--subtitle);
 }
 
 .input__icon {
