--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,8 +20,10 @@
 @import '../../07-lection5/02-radio/radio.css';
 @import '../../05-lection3/03-calendar/calendar.css';
 @import '../../05-lection3/02-modal/modal.css';
-@import '../../06-lection4/01-avatar/avatar.css';
+@import '../../07-lection5/04-input/input.css';
+@import '../../03-lection1/01-button/button.css';
 @import '../../04-lection2/01-histogram/histogram.css';
+@import '../../06-lection4/01-avatar/avatar.css';
 
 
 :root {
@@ -87,7 +89,7 @@
     --main-control:var(--grey-2);
     --label-control:var(--grey-4);
     --checked-control:var(--blue-2);
-    --alternate-control:var(--grey-3);
+    /* --alternate-control:var(--grey-3); */
 }
 
 
