--- a/components/header/header.css
+++ b/components/header/header.css
@@ -68,9 +68,19 @@
 	}
 
 
+.header__icon {
+	position: absolute;
+	top: 20px;
+	left:16px;
+	width: 24px;
+	height: 24px;
+	color: var(--font-secondary);
+	opacity: 0;
+}
 
-
-
+.header__icon[data-open="open"] {
+	opacity:1;
+}
 
 
 @media screen and (max-width:375px) {
