--- a/05-lection3/01-tooltip/tooltip.css
+++ b/05-lection3/01-tooltip/tooltip.css
@@ -13,6 +13,10 @@ transform: translate(-50%, -50%);
 	width: 24px;
 	height: 24px;
 }
+.tooltip__icon{
+	width: 100%;
+	height: 100%;
+}
 
 .tooltip__bubble {
 	display: none;
