--- a/07-lection5/tabs/tabs.css
+++ b/07-lection5/tabs/tabs.css
@@ -8,7 +8,7 @@
 }
 
 .tabs__scroller {
-	padding:0 48px;
+	padding: 0 48px;
 }
 
 .tabs__switchers {
@@ -44,57 +44,51 @@
 	/* width: 100%; */
 	height: 1px;
 	background: var(--alternate-control);
-	border:0;
+	border: 0;
 	margin: 0;
 	padding: 0 48px;
-/* position: absolute;
-top:300px;
-left:0; */
-
 }
 
 .tabs__main {
 	padding: 50px 48px 30px;
 }
 
-.tabs__content {
+.tabs__content {}
 
-}
+.tabs__content_html {}
 
-.tabs__content_complex {}
+.tabs__content_css {}
 
-.tabs__content_simple {}
-
-#all-tab:checked~.tabs__scroller .container .tabs__switchers .tabs__switcher .tabs__title_all {
+/* #all-tab:checked~.tabs__scroller .container .tabs__switchers .tabs__switcher .tabs__title_all {
 	color: var(--font-primary);
 }
 
 #all-tab:checked~.tabs__scroller .container .tabs__switchers .tabs__switcher .tabs__title_all~.tabs__control {
 	background: var(--font-primary);
-}
+} */
 
-#complex-tab:checked~.tabs__scroller .container .tabs__switchers .tabs__switcher .tabs__title_complex {
+#html-tab:checked~.tabs__scroller .container .tabs__switchers .tabs__switcher .tabs__title_html {
 	color: var(--font-primary);
 }
 
-#complex-tab:checked~.tabs__scroller .container .tabs__switchers .tabs__switcher .tabs__title_complex~.tabs__control {
+#html-tab:checked~.tabs__scroller .container .tabs__switchers .tabs__switcher .tabs__title_html~.tabs__control {
 
 	background: var(--font-primary);
 }
 
-#simple-tab:checked~.tabs__scroller .container .tabs__switchers .tabs__switcher .tabs__title_simple {
+#css-tab:checked~.tabs__scroller .container .tabs__switchers .tabs__switcher .tabs__title_css {
 	color: var(--font-primary);
 }
 
-#simple-tab:checked~.tabs__scroller .container .tabs__switchers .tabs__switcher .tabs__title_simple~.tabs__control {
+#css-tab:checked~.tabs__scroller .container .tabs__switchers .tabs__switcher .tabs__title_css~.tabs__control {
 
 	background: var(--font-primary);
 }
 
-#complex-tab:checked~.tabs__main .container .tabs__content_simple {
+#html-tab:checked~.tabs__main .container .tabs__content_css {
 	display: none;
 }
 
-#simple-tab:checked~.tabs__main .container .tabs__content_complex {
+#css-tab:checked~.tabs__main .container .tabs__content_html {
 	display: none;
 }
