--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,6 +30,7 @@
 
 :root {
     --white: #ffffff;
+    --dark-white:#ffffff75;
     --black: #212429;
     --black-2:#000000;
     --pink: #F784AD;
@@ -63,6 +64,8 @@
     --background-secondary: var(--grey-5);
     --active-background:var(--blue-2);
 
+    --main-icon:var(#212429);
+
 
 
    
@@ -94,7 +97,13 @@
     /* --alternate-control:var(--grey-3); */
 }
 
+[data-theme-dark] {
+    --background-main:var(--black);
+    --background-secondary:var(--grey-4);
+    --font-primary:var(--dark-white);
+    --main-icon:var(--grey-1);
 
+}
 
 * {
     font-family: 'Roboto', sans-serif;
@@ -107,3 +116,5 @@ body {
     /* width: 100%;
     height: 100%; */
 }
+
+
